--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="//underscorejs.org/underscore-min.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
     <script src="//coffeescript.org/extras/coffee-script.js" type="text/javascript"></script>
-    <script type="text/javascript" src="src/view-window.js"></script>
+    <script type="text/coffeescript" src="src/view-window.coffee"></script>
     <script type="text/coffeescript">
       $ ->
         $longs = $('.long')
