--- a/index.html
+++ b/index.html
@@ -5,24 +5,28 @@
     <title>ViewWindow</title>
     <script src="//underscorejs.org/underscore-min.js" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
-    <script src="//coffeescript.org/extras/coffee-script.js" type="text/javascript"></script>
-    <script type="text/coffeescript" src="src/view-window.coffee"></script>
-    <script type="text/coffeescript">
-      $ ->
-        $longs = $('.long')
-        waitTime = 1000
-        viewWindow = new ViewWindow(window)
-        enterView = _.throttle ->
-          $(e).trigger('enterview') for e in $longs when viewWindow.viewable(e)
-        , waitTime
+    <script type="text/javascript" src="src/view-window.js"></script>
+    <script type="text/javascript">
+      $(function () {
+        var $longs = $('.long');
+        var waitTime = 1000;
+        var viewWindow = new ViewWindow(window);
+        var enterView = _.throttle(function () {
+          $longs.each(function () {
+            if (ViewWindow.viewable(this)) $(this).trigger('enterview');
+          });
+        }, waitTime);
 
-        $longs.each ->
-          $(@).on 'enterview', _.once ->
-            $(@).animate(opacity: 0, -> $(@).hide())
+        $longs.each(function () {
+          $(this).on('enterview', _.once(function () {
+            $(this).animate({opacity: 0}, function () { $(this).hide() });
+          }))
+        });
 
-        _.delay enterView, 1000
+        _.delay(enterView, waitTime);
 
-        $(window).on 'scroll', enterView
+        $(window).on('scroll', enterView);
+      });
     </script>
     <style type="text/css">
       .long {
